--- a/view/bugpile-view-edit-task.html
+++ b/view/bugpile-view-edit-task.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="Bugpile - Edit Task"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-07-09 17:15:31 CEST"/>
+<meta name="generated" content="2012-07-09 23:09:27 CEST"/>
 <meta name="author" content="nil"/>
 <meta name="description" content="nil"/>
 <meta name="keywords" content="nil"/>
@@ -130,11 +130,28 @@
 <p>
 <i>Edit an existing Task (Bug-Report or Feature-Request)</i></p>
 
-<div id="outline-container-3675e953-7f75-4319-a1e5-dfb09cadea1f" class="outline-2">
-<h2 id="3675e953-7f75-4319-a1e5-dfb09cadea1f"><a id="sec-1" name="sec-1"></a>Edit Task</h2>
-<div class="outline-text-2" id="text-3675e953-7f75-4319-a1e5-dfb09cadea1f">
-</div>
-</div>
+<div id="outline-container-2f822a1e-4bb4-43be-bec4-b0c5caaa42a5" class="outline-2"><form method=post action="http://localhost:8008/save-edits">
+
+<h2 id="2f822a1e-4bb4-43be-bec4-b0c5caaa42a5"><a id="sec-" name="sec-"></a>bug&nbsp;&nbsp;&nbsp;<span class="textfield"><input type="text" name="simple-tag" size="10"maxlenght="20" value=":foo:bar:"></input></span></h2>
+<table border="0"><tr><td>object-foo</td><td><input type="text" name="simple-prop"size="40" maxlength="80" value="bug task html obj"></input></td></tr></table><textarea class="textarea" name="simple-section"cols="80" rows="35"># When changing this ID, you need to change it in
+# bugpile-controller-edit-task-handler too. 
+
+Trying to change the agenda-file-list leads to problems. First, there
+is an error message like 'file list can't be a single directory', but
+it can. Second, the old directory and the new directory for the
+agenda-files are concatenated to an unvalid directory (instead of the
+new replacing the old).
+
+But this may not be a bug, because there might be some undetected
+configuration conflict somewhere that causes the misbehaviour.  
+</textarea>
+<table border=0>
+<tr>
+<td><input type="reset"></td>
+<td><input type="submit" value="submit"></td>
+</tr>
+</table>
+</form></div>
 
 </div>
 <div id="postamble"><a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
