After inspecting the html files, two tiny but apparently significant bugs fixed: 1. one html attribute was finished with an : instead of an = (name: instead of name= in an <input field). 2. when concatenating html strings, I forgot to put a space between the lines, resulting in something like "value=fooname=bar"
now the http-params of the edit-task form are send apparently
correctly by elnode in the call to /save-edits, the elnode-dispatcher
is called, but elnode drops before reaching the handler function for
/save-edits. is that related to the ^M dos line endings in the http params?

--- a/view/bugpile-view-show-task.html
+++ b/view/bugpile-view-show-task.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="Bugpile - Show Task"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-07-10 20:18:43 CEST"/>
+<meta name="generated" content="2012-07-10 23:47:45 CEST"/>
 <meta name="author" content="nil"/>
 <meta name="description" content="nil"/>
 <meta name="keywords" content="nil"/>
@@ -173,7 +173,7 @@ The task in column view (is it possible to include the content text?):</p>
 <td class="right">09-07-2012</td>
 <td class="left">org-agenda</td>
 <td class="left">intermediate</td>
-<td class="left">:dee:doo:</td>
+<td class="left">&nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -184,7 +184,7 @@ The task in outline view:</p>
 </div>
 </div>
 <div id="outline-container-2f822a1e-4bb4-43be-bec4-b0c5caaa42a5" class="outline-2">
-<h2 id="2f822a1e-4bb4-43be-bec4-b0c5caaa42a5"><a id="sec-2" name="sec-2"></a><span class="todo TODO">TODO</span> bug&nbsp;&nbsp;&nbsp;<span class="tag"><span class="dee">dee</span>&nbsp;<span class="doo">doo</span></span></h2>
+<h2 id="2f822a1e-4bb4-43be-bec4-b0c5caaa42a5"><a id="sec-2" name="sec-2"></a><span class="todo TODO">TODO</span> bug</h2>
 <div class="outline-text-2" id="text-2f822a1e-4bb4-43be-bec4-b0c5caaa42a5">
 <p>
 Trying to change the agenda-file-list leads to problems. First, there
