--- a/view/bugpile-view-edit-task.html
+++ b/view/bugpile-view-edit-task.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="Bugpile - Edit Task"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-07-10 20:19:16 CEST"/>
+<meta name="generated" content="2012-07-10 23:48:47 CEST"/>
 <meta name="author" content="nil"/>
 <meta name="description" content="nil"/>
 <meta name="keywords" content="nil"/>
@@ -132,8 +132,8 @@
 
 <div id="outline-container-2f822a1e-4bb4-43be-bec4-b0c5caaa42a5" class="outline-2"><form method=post action="http://localhost:8008/save-edits">
 
-<h2 id="2f822a1e-4bb4-43be-bec4-b0c5caaa42a5"><a id="sec-" name="sec-"></a><span class="selectbox"><select name:"simple-todo" size="1"><option value="1" selected>TODO</option><option>NEXT</option><option>DONE</option><option>WAITING</option><option>HOLD</option><option>CANCELLED</option><option>PHONE</option></select></span>&nbsp;bug&nbsp;&nbsp;&nbsp;<span class="textfield"><input type="text" name="simple-tag" size="10"maxlenght="20" value=":dee:doo:"></input></span></h2>
-<table border="0"><tr><td>object-foo</td><td><input type="text" name="simple-prop"size="40" maxlength="80" value="whats up"></input></td></tr></table><textarea class="textarea" name="simple-section"cols="80" rows="35"># When changing this ID, you need to change it in
+<h2 id="2f822a1e-4bb4-43be-bec4-b0c5caaa42a5"><a id="sec-" name="sec-"></a><span class="selectbox"><select name="simple-todo" size="1"><option value="1" selected>TODO</option><option>NEXT</option><option>DONE</option><option>WAITING</option><option>HOLD</option><option>CANCELLED</option><option>PHONE</option></select></span>&nbsp;bug&nbsp;&nbsp;&nbsp;<span class="textfield"><input type="text" name="simple-tag" size="10"maxlenght="20" value=":"></input></span></h2>
+<table border="0"><tr><td>object-foo</td><td><input type="text" name="simple-prop" size="40" maxlength="80" value=""></input></td></tr></table><textarea class="textarea" name="simple-section" cols="80" rows="35"># When changing this ID, you need to change it in
 # bugpile-controller-edit-task-handler too. 
 
 Trying to change the agenda-file-list leads to problems. First, there
